# GAMES101

./: README.md  asset-manifest.json  index.html
GAMES101/: .gitignore
GAMES101/hw1/Assignment1/: rasterizer.cpp
GAMES101/hw2/Assignment2/: CMakeLists.txt  build.sh  rasterizer.cpp
GAMES101/hw3/Assignment3/: main.cpp  rasterizer.cpp
GAMES101/hw4/Assignment4/: CMakeLists.txt  build.sh  main.cpp
GAMES101/hw5/Assignment5/: CMakeLists.txt  Light.hpp  Triangle.hpp
GAMES101/hw6/Assignment6/: BVH.hpp  Intersection.hpp  Material.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  build.sh
GAMES101/hw7/Assignment7/: BVH.cpp  BVH.hpp  Intersection.hpp  Material.hpp  Object.hpp  Scene.cpp  Scene.hpp  Triangle.hpp  Vector.hpp  main.cpp
GAMES101/hw8/Assignment8/src/: application.h  main.cpp
GAMES101/hw8/rope-simulation/: package.json
GAMES101/hw8/rope-simulation/src/: App.tsx
GAMES101/vm/: provider.tf
gamemath/: CMakeLists.txt  build.sh  main.cpp
hw1/Assignment1/: CMakeLists.txt  build.sh  main.cpp  rasterizer.hpp
hw2/Assignment2/: CMakeLists.txt  build.sh  main.cpp  rasterizer.hpp
hw3/Assignment3/: CMakeLists.txt  build.sh
hw4/Assignment4/: CMakeLists.txt  main.cpp
hw5/Assignment5/: CMakeLists.txt  Renderer.cpp  Triangle.hpp  global.hpp
hw6/Assignment6/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  OBJ_Loader.hpp  Object.hpp  Renderer.cpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
hw7/Assignment7/: AreaLight.hpp  BVH.cpp  Bounds3.hpp  CMakeLists.txt  Light.hpp  Material.hpp  OBJ_Loader.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Sphere.hpp  Triangle.hpp  build.sh
hw8/Assignment8/: build.sh
hw8/Assignment8/src/: application.cpp  mass.h  rope.cpp
hw8/rope-simulation/src/RopeSimulation/: Mass.ts  index.tsx
playground/: package.json
playground/components/: NavBar.jsx  View.jsx
playground/src/: App.jsx  index.js
playground/src/components/: NavBar.jsx  View.jsx  View.module.css
playground/src/components/Demos/: Demo1.jsx  Demo10.jsx  Demo11.jsx  (+20 more)
playground/src/store/: Store.js  dirs.js  reducer.js
static/css/: main.4cff6204.css  main.4cff6204.css.map  main.70ab12b0.css  main.70ab12b0.css.map
static/js/: 493.ac5867c0.chunk.js  493.ac5867c0.chunk.js.map  main.3b40d286.js  main.3b40d286.js.map  main.4d1f087a.js  main.4d1f087a.js.map  main.547cbd91.js  main.547cbd91.js.map  main.8f8344f2.js  main.8f8344f2.js.map  main.bd025280.js  main.bd025280.js.map  main.c2667db9.js  main.c2667db9.js.map  main.d20d7c02.js  main.d20d7c02.js.map  main.ed45a0bc.js  main.ed45a0bc.js.map  main.f7ae398e.js  main.f7ae398e.js.map  main.fa51e364.js  main.fa51e364.js.map
vm/: .terraform.lock.hcl  engine.tf  startup.sh  vars.tf
(+6 files in other folders)
